# first_pico_test

./: CMakeLists.txt  README.md  i2c_peripheral_trials.c  main.c
